--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@stackbit/cms-git": "^1.0.33",
+    "@stackbit/types": "^2.1.13",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/typography": "^0.5.16",
