--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@types/sendmail": "^1.4.7",
     "aos": "3.0.0-beta.6",
     "date-fns": "^4.1.0",
+    "mailersend": "^2.3.0",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.10.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "rehype-pretty-code": "^0.14.0",
+    "sendmail": "^1.6.1",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
