--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "mailersend": "^2.3.0",
     "next": "15.1.6",
+    "next-intl": "^3.26.3",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.10.0",
     "react": "19.0.0",
