--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,11 +19,11 @@
   },
   "forwardPorts": [3000],
   "portsAttributes": {
-    "4321": {
+    "3000": {
       "label": "yanabourne",
       "onAutoForward": "openBrowserOnce"
     }
   },
-  "runArgs": ["-p=3000:3000", "-p=4321:4321", "-p=8090:8090"],
+  "runArgs": ["-p=3000:3000", "-p=8090:8090"],
   "remoteUser": "node"
 }
