--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --hostname 0.0.0.0",
+    "dev": "next dev",
+    "dev:stackbit": "next dev --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +24,7 @@
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "next-mdx-remote": "^5.0.0",
+    "parvus": "^3.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "rehype-pretty-code": "^0.14.0",
